--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<header id="header">
 						<div class="inner center">
 							<center>
-								<h1><p style="margin: 0 0 0em 0; font-weight: normal;">Las capitales peor comunicadas de España:<span style="font-weight: bold;"> Cáceres</span>, <span style="font-weight: bold;">Badajoz</span> y <span style="font-weight: bold;">Mérida</span></p></h1>
+								<h1><p style="margin: 0 0 0em 0; font-weight: normal;">Las capitales peor comunicadas por tren de España:<span style="font-weight: bold;"> Cáceres</span>, <span style="font-weight: bold;">Badajoz</span> y <span style="font-weight: bold;">Mérida</span></p></h1>
 								<h2><p style="color: #e8b025; margin: 0 0 0em 0;">Breve estudio sobre la red ferroviaria española</p></h2>
 							</center>
 						</div>
