Add missing figure

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<p>
 							Finalmente, hemos representado los indicadores calculados para las <span style="font-weight: bold">48</span> ciudades consideradas en el estudio en el siguiente gráfico:
 							</p>
-							<span class="image main"><img src="figures/todas_grafico2.jpg" alt="" /></span>
+							<span class="image main"><img src="figures/todas_grafico2.png" alt="" /></span>
 							<h3 style="margin: 0 0 0em 0;"> Conclusiones</h3>
 							<p>
 							Las dos capitales de provincia de Extremadura, <span style="font-weight: bold">Cáceres</span> y <span style="font-weight: bold">Badajoz</span>, y su capital <span style="font-weight: bold">Mérida</span> encabezan la lista de <span style="font-weight: bold">ciudades peor conectadas por tren con Madrid</span>. Son resultados que en conjunto reflejan de manera concluyente que el tren en Extremadura es lento y precario.
