--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:og="http://ogp.me/ns#"
+      xmlns:fb="https://www.facebook.com/2008/fbml">
 	<head>
 		<title>El Tren de Baja Velocidad: Estudio sobre las capitales españolas peor comunicadas por tren</title>
 		<meta charset="utf-8" />
