Add facebook metadata

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<p>
 							Podemos cuantificar la calidad del tren Cacereño de la siguiente manera:
 							</p>
-							$$T_{Cáceres} = {Tiempo_{Tren} (C, Madrid) \over Tiempo_{Carretera} (C, Madrid)} = { 173 \over 257} = 0.6732$$
+							$$T_{Cáceres} = {Tiempo_{Tren} (Cáceres, Madrid) \over Tiempo_{Carretera} (Cáceres, Madrid)} = { 173 \over 257} = 0.6732$$
 							<p>
 							El hecho de que el valor de este indicador sea menor que uno nos está indicando que el recorrido por carretera es preferible respecto al correspondiente por tren, algo que ya habíamos deducido al ver las figuras y los datos temporales. Generalizando, cuanto menor sea este índice de calidad, menos compensará realizar el viaje en tren y más recomendable es optar por el viaje por carretera. Se puede concluir que la calidad del tren que conecta Madrid con Cáceres es baja.
 							</p>
@@ -91,7 +91,7 @@
 							Veamos ahora el mismo análisis aplicado a <span style="font-weight: bold">Castellón de la Plana</span>:
 							</p>
 							<span class="image main"><img src="figures/final_castellon.jpg" alt="" /></span>
-							$$T_{Castellon} = {Tiempo_{Tren} (C, Madrid) \over Tiempo_{Carretera} (C, Madrid)} = { 249 \over 165} = 1.5091$$
+							$$T_{Castellon} = {Tiempo_{Tren} (Castellon, Madrid) \over Tiempo_{Carretera} (Castellon, Madrid)} = { 249 \over 165} = 1.5091$$
 							<p>
 							En esta ocasión, el valor indicador supera ampliamente la unidad. El tren se revela como un medio de transporte más conveniente para viajar desde Madrid a Castellón de la Plana. Se puede concluir por tanto que la conexión en tren tiene buena calidad. Comparando ambos indicadores \(T_{Cáceres} = 0.6732 < 1.5091 = T_{Castellon}\) se ve que la calidad del tren castellonense es mayor que la del cacereño.
 							</p>
